(library
 (name libcrypto)
 (public_name quic.libcrypto)
 (foreign_stubs
  (language c)
  (names libcrypto_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp link_flags.sexp)
 (action
  (run ./config/discover.exe)))
